tests/build/widget/widget_new_with_error2.stderr
error[E0433]: failed to resolve: could not find `__widget_macro` in `test_widget`
  --> $DIR/widget_new_with_error2.rs:3:1
   |
3  | #[widget($crate::test_widget)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `__widget_macro` in `test_widget`
...
11 |     let _ = test_widget!();
   |             -------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot find macro `not_a_thing` in this scope
 --> $DIR/widget_new_with_error2.rs:6:14
  |
6 |     inherit!(not_a_thing);
  |              ^^^^^^^^^^^
